<resources>
    <string name="app_name">RoadRoamer</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_title_allow_background_processing">Allow background processing</string>
    <string name="pref_title_allow_gps">Allow GPS location provider</string>
    <string name="pref_title_allow_network">Allow Network location provider</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="pref_title_demo_mode">Activate Demo Mode</string>
    <!-- Service settings -->
    <string name="pref_title_user_name">User name</string>
    <string name="pref_title_user_password">Password</string>
    <string name="pref_title_back_end_id">Back end ID</string>
    <string name="pref_title_use_custom_uri">Use custom Service address</string>
    <string name="pref_title_server_uri">Custom Service address</string>
    <!-- Notifications settings -->
    <string name="pref_title_allow_notifications">Allow notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Settings headers & titles -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_server">Service preferences</string>
    <string name="pref_header_notifications">Notifications</string>

    <!-- Settings preference hints/placeholders -->
    <string name="pref_hint_server_uri">Enter the customized URI of the service</string>

    <!-- Settings arrays etc. -->
    <string-array name="pref_text_size_titles">
        <item>Smaller</item>
        <item>Normal</item>
        <item>Larger</item>
        <item>Extra large</item>
    </string-array>
    <string-array name="pref_text_size_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>100</item>
    </string-array>

    <!-- App strings-->
    <string name="title_activity_settings">Settings</string>
    <string name="preference_no_empty">Empty value is not allowed</string>
    <string name="preference_malformed_uri">Given URI was not valid</string>
    <string name="preference_undefined">Preference undefined</string>
</resources>
